background overflow fixed

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,8 @@ html {
 body {
     background-color: rgb(0, 0, 0);
     margin: 0;
+     overflow-x: hidden; 
+
 }
 
 /* --- HERO SECTION --- */
@@ -719,4 +721,3 @@ body {
     object-fit: contain;
     border-radius: 12px; 
 }
-
